Fix AR view styling on mobile devices.

--- a/styles.css
+++ b/styles.css
@@ -73,3 +73,10 @@ body#page-mod-wavefront-ar div#page div.ar-stage {
 	margin: 0;
 	background: #000;
 }
+
+@media (max-width: 767px) {
+    .wavefront-gallery.row {
+        margin-left: 0;
+        margin-right: 0;
+    }
+}
